<resources>
    <string name="app_name">Kvizalica</string>
    <string name="pocetni_screen">Kvizalica</string>
    <string name="button_igraj">Igraj</string>
    <string name="odaberi_kategoriju">Odaberi\nkategoriju:</string>
    <string name="naslov_brojevi">Brojevi</string>
    <string name="naslov_zivotinje">Životinje</string>
    <string name="naslov_voce">Voće</string>
    <string name="naslov_povrce">Povrće</string>
    <string name="kategorija_voce">Kategorija:</string>
    <string name="naslov_dialogVrijeme">Vrijeme je\nisteklo!</string>
    <string name="button_ok">OK</string>
    <string name="sljedece_pitanje">Sljedeće pitanje</string>
    <string name="level_jedan_zavrsen"><u>Level 1 završen</u></string>
    <string name="ukupan_broj_pitanja">Ukupan broj pitanja: </string>
    <string name="tocni_odgovori">Točni odgovori: </string>
    <string name="netocni_odgovori">Netočni odgovori: </string>
    <string name="button_sljedeci_level">Sljedeći level</string>
    <string name="button_pocetni_izbornik">Početni izbornik</string>
    <string name="button_igraj_ponovno">Igraj ponovno</string>
    <string name="odabrana_kategorija">Odabrana kategorija i level:</string>
    <string name="kreni">Kreni</string>

</resources>