<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ChooseCategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/odaberiKategorijuText"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cherryBomb"
            android:text="@string/odaberi_kategoriju"
            android:textAlignment="center"
            android:textColor="@color/ljubicasta"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/slika_kategorije_brojevi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/choose_category_rounded_button"
            android:scaleType="fitCenter"
            android:src="@drawable/brojevi"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/slika_kategorije_zivotinje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:background="@drawable/choose_category_rounded_button"
            android:scaleType="fitCenter"
            android:src="@drawable/zivotinje"
            tools:ignore="SpeakableTextPresentCheck" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/naslov_kategorije_brojevi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="5dp"
            android:text="@string/naslov_brojevi"
            android:textSize="27sp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/narancasta"/>

        <TextView
            android:id="@+id/naslov_kategorije_zivotinje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="5dp"
            android:text="@string/naslov_zivotinje"
            android:textSize="27sp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/narancasta"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/slika_kategorije_voce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/choose_category_rounded_button"
            android:scaleType="fitCenter"
            android:src="@drawable/voce"
            tools:ignore="SpeakableTextPresentCheck"/>

        <ImageButton
            android:id="@+id/slika_kategorije_povrce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/choose_category_rounded_button"
            android:scaleType="fitCenter"
            android:src="@drawable/povrce"
            tools:ignore="SpeakableTextPresentCheck"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/naslov_kategorije_voce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="5dp"
            android:text="@string/naslov_voce"
            android:textSize="27sp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/narancasta"/>

        <TextView
            android:id="@+id/naslov_kategorije_povrce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="5dp"
            android:text="@string/naslov_povrce"
            android:textSize="27sp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/narancasta"/>

    </LinearLayout>




</LinearLayout>