<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/level1Zavrsen"
    android:background="@color/background"
    tools:context=".LevelZavrsenActivity">


    <TextView
        android:id="@+id/textLevel1Zavrsen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cherrybombregular"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/level_jedan_zavrsen"
        android:textColor="@color/plava_level_zavrsen"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_textLevel1Zavrsen_donji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_textLevel1Zavrsen_gornji" />

    <TextView
        android:id="@+id/text_ukupanBrojPitanja"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cherrybombregular"
        android:text="@string/ukupan_broj_pitanja"
        android:textColor="@color/plava_level_zavrsen"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_text_ukupanBrojPitanjaLevel1_donji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_text_ukupanBrojPitanjaLevel1_gornji" />

    <TextView
        android:id="@+id/text_tocniOdgovori"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cherrybombregular"
        android:text="@string/tocni_odgovori"
        android:textColor="@color/plava_level_zavrsen"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_text_tocniOdgovori_donji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_text_tocniOdgovori_gornji" />

    <TextView
        android:id="@+id/text_netocniOdgovori"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cherrybombregular"
        android:text="@string/netocni_odgovori"
        android:textColor="@color/plava_level_zavrsen"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_text_netocniOdgovori_donji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_text_tocniOdgovori_donji" />



    <Button
        android:id="@+id/button_pocetniIzbornik"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pocetni_izbornik_button"
        android:fontFamily="@font/balootammudu"
        android:text="@string/button_pocetni_izbornik"
        android:textColor="@color/bijela"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_button_pocetniIzbornik_donji"
        app:layout_constraintEnd_toStartOf="@+id/guideline_buttoni_desni"
        app:layout_constraintStart_toStartOf="@+id/guideline_buttoni_lijevi"
        app:layout_constraintTop_toTopOf="@+id/guideline_button_pocetniIzbornik_gornji" />

    <Button
        android:id="@+id/button_igrajPonovno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/igraj_ponovno_button"
        android:fontFamily="@font/balootammudu"
        android:text="@string/button_igraj_ponovno"
        android:textColor="@color/bijela"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_button_igrajPonovno_donji"
        app:layout_constraintEnd_toStartOf="@+id/guideline_buttoni_desni"
        app:layout_constraintStart_toStartOf="@+id/guideline_buttoni_lijevi"
        app:layout_constraintTop_toTopOf="@+id/guideline_button_igrajPonovno_gornji" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_textLevel1Zavrsen_gornji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_textLevel1Zavrsen_donji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text_ukupanBrojPitanjaLevel1_gornji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text_ukupanBrojPitanjaLevel1_donji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text_tocniOdgovori_gornji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text_tocniOdgovori_donji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_text_netocniOdgovori_donji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button_pocetniIzbornik_gornji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button_pocetniIzbornik_donji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button_igrajPonovno_gornji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button_igrajPonovno_donji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_buttoni_lijevi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_buttoni_desni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.79" />




</androidx.constraintlayout.widget.ConstraintLayout>